<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="question_one_text">How was the service?</string>
    <string name="tip_20_percent">Amazing (20%)</string>
    <string name="tip_18_percent">Good (18%)</string>
    <string name="tip_15_percent">OK (15%)</string>
    <string name="no_tip">Bad (no tip)</string>
    <string name="switch_text">Round up tip?</string>
    <string name="button_text">calculate</string>
    <string name="tip_amount_text">Tip amount:</string>
    <string name="empty_input_text_warning">Please, input the cost of service!</string>
    <string name="equal_to_zero_text_warning">The cost of service is equal to zero!</string>
    <string name="formatted_tip">Tip amount: %s</string>
    <string name="formatted_total_cost">Total cost(+tip): %s</string>
    <string name="total_cost_text">Total cost(+tip):</string>
    <string name="share_button_text">SHARE</string>

    <!--    sharing strings-->
    <string name="share_cost_of_service_text">COST OF SERVICE</string>
    <string name="share_tip_percentage_text">TIP PERCENTAGE</string>
    <string name="share_round_tip_text">ROUND TIP</string>
    <string name="share_tip_value_text">TIP VALUE</string>
    <string name="share_total_cost_plus_tip_text">TOTAL COST(+TIP)</string>
    <string name="round_tip_share_true">Yes</string>
    <string name="round_tip_share_false">No</string>

    <string name="tip_test_case_one">$10.00</string>
    <string name="tip_test_case_two">$9.00</string>
    <string name="tip_test_case_three">$7.50</string>
    <string name="tip_test_case_four">$0.00</string>
</resources>